# personal-RAG

./: .gitignore  01-scrap-kiwilimon.ipynb  02-format-to-sql.ipynb  03-sql-engine.ipynb  04-vectors.ipynb  RAG.ipynb  app.ipynb  app.py  chunks.ipynb  format-data-test.ipynb  format-to-json.ipynb  formatting.ipynb  gemini.ipynb  pandas-engine.ipynb  pyproject.toml  scrap-kiwilimon.ipynb  sql-engine.ipynb  test.ipynb  to-chroma.ipynb  vectors.ipynb
.ipynb_checkpoints/: scrap-kiwilimon-checkpoint.ipynb
chroma/: chroma-hugging.ipynb
chroma_recipe/73c76b66-f65c-4b8d-9761-239075f598da/: index_metadata.pickle
data/loader/: recipes_flat.json
notebooks/: 01-crawl.ipynb  02-parse-to-md.ipynb  03-parser.ipynb  04-test.ipynb  tools.py
utils/: tools.py
