[tool.poetry]
name = "finance"
version = "0.1.0"
description = "personal RAG project"
authors = ["IsaiasZc <coroxerox2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
playwright = "^1.45.0"
markdownify = "^0.12.1"
llama-index = "^0.10.55"
beautifulsoup4 = "^4.12.3"
llama-index-llms-gemini = "^0.1.11"
llama-index-embeddings-gemini = "^0.1.8"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
